--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
         <a href="https://www.youtube.com/@PLANOAUTOMATICO" class="youtube-link">Clica aqui para Visitar e se inscrever no nosso Canal do YouTube</a>
         <div id="accessCount"></div> <!-- Div para exibir a contagem -->
 
-        <button id="chatButton">
-            <img src="Chat.png" alt="Chat Icon">
+        <button id="chatButton" onclick="window.location.href = 'chat.html';">
+            <img src="chat.png" alt="Chat">
         </button>
     </div>
 </body>
