--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <div id="accessCount"></div> <!-- Div para exibir a contagem -->
 
         <button id="chatButton" onclick="window.location.href = 'chat.html';">
-            <img src="chat.png" alt="Chat">
+            <img src="Chat.png" alt="Chat">
         </button>
     </div>
 </body>
