--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         <button onclick="window.location.href = 'primario.html';">Ensino Primário</button>
         <button onclick="window.location.href = 'secundario.html';">Ensino Secundário</button>
         <button onclick="window.location.href = 'anexos.html';">Criar apontamentos</button>
+        <button onclick="window.location.href = 'nome.html';">Adiciona o nome</button>
         <a href="https://chat.whatsapp.com/D74uYbZpqCl97pzhTqkFRH" class="whatsapp-link">Clica aqui para se juntar ao nosso grupo do WhatsApp</a>
         <a href="https://www.youtube.com/@PLANOAUTOMATICO" class="youtube-link">Clica aqui para Visitar e se inscrever no nosso Canal do YouTube</a>
         <div id="accessCount"></div> <!-- Div para exibir a contagem -->
