--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plano Automático</title>
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -21,7 +18,6 @@
             color: #333;
             padding: 10px;
         }
-
         .container {
             max-width: 400px;
             margin: auto;
@@ -30,7 +26,6 @@
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
-
         input {
             margin: 10px 0;
             padding: 15px;
@@ -42,77 +37,45 @@
             outline: none;
             transition: border-color 0.3s;
         }
-
         .divider {
             display: flex;
             align-items: center;
             text-align: center;
             margin: 20px 0;
         }
-
         .divider::before,
         .divider::after {
             content: '';
             flex: 1;
             border-bottom: 1px solid #ddd;
         }
-
         .divider:not(:empty)::before {
             margin-right: .5em;
         }
-
         .divider:not(:empty)::after {
             margin-left: .5em;
         }
-
         .btn-custom {
             width: 100%;
             margin-top: 10px;
             padding: 10px;
         }
-
         .error-text {
             color: red;
             font-size: 14px;
             margin-top: -5px;
             margin-bottom: 10px;
         }
-
         #forgotPasswordBtn {
             margin-top: 10px;
             text-decoration: none;
         }
-
         .mb-4 {
             color: #404EE5;
         }
     </style>
 </head>
-
 <body>
-
-    <!-- Modal para Recuperação de Senha -->
-    <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="forgotPasswordModalLabel">Recuperar Senha</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="resetEmail" class="form-label">Digite seu email para redefinir a senha:</label>
-                        <input type="email" id="resetEmail" class="form-control" placeholder="Digite seu email" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" id="sendResetEmailBtn" class="btn btn-primary">Enviar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="container text-center">
         <h2 class="mb-4">Plano Automático</h2>
         <p id="formTitle">Entrar</p>
@@ -125,10 +88,8 @@
             <p id="loginPasswordError" class="error-text" style="display: none;">Por favor, insira sua senha.</p>
 
             <button id="loginBtn" class="btn btn-primary btn-custom" onclick="login()">Login</button>
-            <button id="googleLoginBtn" class="btn btn-danger btn-custom" onclick="loginWithGoogle()">Login com Google</button>
             <a id="forgotPasswordBtn" class="btn btn-link text-dark my-link" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">Esqueci minha senha</a>
             <div class="divider">ou</div>
-
             <button id="showRegisterBtn" class="btn btn-success btn-custom" onclick="showRegister()">Cadastre-se</button>
         </div>
 
@@ -140,21 +101,37 @@
             <p id="registerPasswordError" class="error-text" style="display: none;">A senha deve ter no mínimo 6 caracteres.</p>
 
             <button id="registerBtn" class="btn btn-primary btn-custom" onclick="register()">Cadastrar</button>
-            <button id="googleRegisterBtn" class="btn btn-danger btn-custom" onclick="registerWithGoogle()">Cadastrar com Google</button>
-
             <div class="divider">ou</div>
-
             <button id="showLoginBtn" class="btn btn-secondary btn-custom" onclick="showLogin()">Voltar ao Login</button>
         </div>
     </div>
 
-    <!-- Importando Firebase com módulos e Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Modal para Recuperação de Senha -->
+    <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="forgotPasswordModalLabel">Recuperar Senha</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="resetEmail" class="form-label">Digite seu email para redefinir a senha:</label>
+                        <input type="email" id="resetEmail" class="form-control" placeholder="Digite seu email">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" id="sendResetEmailBtn" class="btn btn-primary">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- Importando Firebase -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyCjR7ByKvIFDoF61CL5u2SmYjZ2SOqGd4I",
@@ -166,124 +143,71 @@
             measurementId: "G-7GZFKCREKH"
         };
 
-        // Inicializa o Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         console.log('Firebase inicializado', app);
 
-        // Funções de login e registro
-        window.login = async function () {
-            console.log('Função login chamada');
-            const email = document.getElementById('loginEmail').value;
-            const password = document.getElementById('loginPassword').value;
+        document.addEventListener('DOMContentLoaded', () => {
+            window.login = async function() {
+                const email = document.getElementById('loginEmail').value;
+                const password = document.getElementById('loginPassword').value;
 
-            // Limpa as mensagens de erro
-            document.getElementById('loginEmailError').style.display = 'none';
-            document.getElementById('loginPasswordError').style.display = 'none';
-
-            try {
-                const userCredential = await signInWithEmailAndPassword(auth, email, password);
-                console.log('Login bem-sucedido:', userCredential.user.email);
-                window.location.href = 'home.html';
-            } catch (error) {
-                console.error('Erro no login:', error);
-                document.getElementById('loginPasswordError').style.display = 'block';
-            }
-        };
-
-        window.register = async function () {
-            console.log('Função register chamada');
-            const email = document.getElementById('registerEmail').value;
-            const password = document.getElementById('registerPassword').value;
-
-            // Limpa as mensagens de erro
-            document.getElementById('registerEmailError').style.display = 'none';
-            document.getElementById('registerPasswordError').style.display = 'none';
-
-            // Validação simples
-            if (password.length < 6) {
-                document.getElementById('registerPasswordError').style.display = 'block';
-                return;
-            }
-
-            try {
-                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-                console.log('Usuário cadastrado:', userCredential.user.email);
-                alert('Cadastro feito com sucesso!');
-                resetForms();
-            } catch (error) {
-                console.error('Erro ao cadastrar:', error);
-                if (error.code === 'auth/email-already-in-use') {
-                    document.getElementById('registerEmailError').style.display = 'block';
-                } else {
-                    alert('Erro desconhecido: ' + error.message);
-                }
-            }
-        };
-
-        window.loginWithGoogle = async function () {
-            const provider = new GoogleAuthProvider();
-
-            try {
-                const result = await signInWithPopup(auth, provider);
-                const user = result.user;
-                console.log('Login com Google bem-sucedido:', user.email);
-                window.location.href = 'home.html';
-            } catch (error) {
-                console.error('Erro ao fazer login com Google:', error);
-                alert('Erro ao fazer login com Google: ' + error.message);
-            }
-        };
-
-        // Função para registro com Google
-        window.registerWithGoogle = async function () {
-            const provider = new GoogleAuthProvider();
-
-            try {
-                const result = await signInWithPopup(auth, provider);
-                const user = result.user;
-                console.log('Cadastro com Google bem-sucedido:', user.email);
-                alert('Cadastro feito com sucesso!');
-
-                // Redirecionar para a página principal após o cadastro
-                window.location.href = 'home.html';
-            } catch (error) {
-                console.error('Erro ao cadastrar com Google:', error);
-                alert('Erro ao cadastrar com Google: ' + error.message);
-            }
-        };
-
-        window.showRegister = function () {
-            document.getElementById('loginForm').style.display = 'none';
-            document.getElementById('registerForm').style.display = 'block';
-            document.getElementById('formTitle').innerText = 'CADASTRAR-SE';
-        };
-
-        window.showLogin = function () {
-            document.getElementById('registerForm').style.display = 'none';
-            document.getElementById('loginForm').style.display = 'block';
-            document.getElementById('formTitle').innerText = 'Entrar';
-        };
-
-        // Função de Enviar Email de Recuperação de Senha
-        document.getElementById('sendResetEmailBtn').addEventListener('click', async function () {
-            const email = document.getElementById('resetEmail').value;
-
-            if (email) {
                 try {
-                    await sendPasswordResetEmail(auth, email);
-                    alert('Email de recuperação enviado! Verifique sua caixa de entrada.');
-                    // Fecha a modal após o envio
-                    const forgotPasswordModal = bootstrap.Modal.getInstance(document.getElementById('forgotPasswordModal'));
-                    if (forgotPasswordModal) {
-                        forgotPasswordModal.hide();
-                    }
+                    const userCredential = await signInWithEmailAndPassword(auth, email, password);
+                    console.log('Login bem-sucedido:', userCredential.user.email);
+                    window.location.href = 'home.html'; // Redirecionar para a página inicial
                 } catch (error) {
-                    alert('Erro ao enviar email de recuperação: ' + error.message);
+                    console.error('Erro no login:', error);
+                    document.getElementById('loginEmailError').style.display = 'block';
+                    document.getElementById('loginPasswordError').style.display = 'block';
                 }
-            } else {
-                alert('Por favor, insira seu email para recuperar a senha.');
-            }
+            };
+
+            window.register = async function() {
+                const email = document.getElementById('registerEmail').value;
+                const password = document.getElementById('registerPassword').value;
+
+                try {
+                    const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                    console.log('Usuário cadastrado:', userCredential.user.email);
+                    alert('Cadastro feito com sucesso!');
+                    resetForms();
+                } catch (error) {
+                    console.error('Erro ao cadastrar:', error);
+                    document.getElementById('registerEmailError').style.display = 'block';
+                    document.getElementById('registerPasswordError').style.display = 'block';
+                }
+            };
+
+            window.showRegister = function() {
+                document.getElementById('loginForm').style.display = 'none';
+                document.getElementById('registerForm').style.display = 'block';
+                document.getElementById('formTitle').innerText = 'CADASTRAR-SE';
+            };
+
+            window.showLogin = function() {
+                document.getElementById('registerForm').style.display = 'none';
+                document.getElementById('loginForm').style.display = 'block';
+                document.getElementById('formTitle').innerText = 'Entrar';
+            };
+
+            document.getElementById('sendResetEmailBtn').addEventListener('click', function() {
+                const email = document.getElementById('resetEmail').value;
+
+                if (email) {
+                    sendPasswordResetEmail(auth, email)
+                        .then(() => {
+                            alert('Email de recuperação enviado! Verifique sua caixa de entrada.');
+                            const forgotPasswordModal = bootstrap.Modal.getInstance(document.getElementById('forgotPasswordModal'));
+                            forgotPasswordModal.hide();
+                        })
+                        .catch((error) => {
+                            alert('Erro ao enviar email de recuperação: ' + error.message);
+                        });
+                } else {
+                    alert('Por favor, insira seu email para recuperar a senha.');
+                }
+            });
         });
 
         function resetForms() {
@@ -297,6 +221,7 @@
         }
     </script>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
