--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             window.register = async function() {
                 const email = document.getElementById('registerEmail').value;
-                const defaultPassword = '163457'; // Senha padrão
+                const defaultPassword = '163458';
 
                 try {
                     const userCredential = await createUserWithEmailAndPassword(auth, email, defaultPassword);
