--- a/teste2.html
+++ b/teste2.html
@@ -133,10 +133,9 @@
             }
         });
 
-        function formatDate(timestamp) {
+        function formatTime(timestamp) {
             const date = new Date(timestamp.seconds * 1000);
-            const options = { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit', hour12: false };
-            return date.toLocaleString('pt-BR', options);
+            return date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
         }
 
         async function getUserName(email) {
@@ -157,7 +156,7 @@
             for (const doc of snapshot.docs) {
                 const msg = doc.data();
                 const userName = await getUserName(msg.email);
-                const time = msg.timestamp ? formatDate(msg.timestamp) : '';
+                const time = msg.timestamp ? formatTime(msg.timestamp) : '';
 
                 const msgDiv = document.createElement('div');
                 msgDiv.className = `message ${msg.email === auth.currentUser.email ? 'sent' : 'received'}`;
@@ -184,7 +183,7 @@
                     if (change.type === "added") {
                         const msg = change.doc.data();
                         const userName = await getUserName(msg.email);
-                        const time = msg.timestamp ? formatDate(msg.timestamp) : '';
+                        const time = msg.timestamp ? formatTime(msg.timestamp) : '';
 
                         const msgDiv = document.createElement('div');
                         msgDiv.className = `message ${msg.email === auth.currentUser.email ? 'sent' : 'received'}`;
